Minecraft 1.20.1（Fabric）対応 (#38)
* feat: 🎸 Minecraft 1.20.1（Fabric）に対応する

Stonecutterに1.20.1-fabricノードを追加。初のMCバージョン`//? if`ゲート、
Fabric初のaccesswidener（RenderType.CompositeState等のアクセス開放）、
JDK21専用API（Math.clamp等）のポータブル置き換えが必要になった。
CIのbuildジョブもノードごとの並列matrixへ分割し、runtimeジョブは
通常PRでは正典ノードのみに絞った。

* chore: 🤖 バージョンを0.2.0に更新

* fix: 🐛 CIのfabric-api版取得が複数MCバージョンで壊れるのを直す

deps.fabric_apiのgrepがMCバージョンを絞っておらず、1.20.1ノード追加で
テーブルが2つになった途端マッチが2行返るようになっていた。GITHUB_OUTPUTへ
複数行の値をそのまま書き込んで壊れ、runtime(1.21.1-fabric)・
runtime(1.20.1-fabric)の両方でクライアントが一度も起動しないまま失敗していた。